// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template EditPage should not show View Published link if template is not published 1`] = `
Array [
  Object {
    "content": "Save as Draft",
    "disabled": undefined,
    "onClick": undefined,
  },
  Object {
    "content": "Delete",
    "onClick": [Function],
  },
  Object {
    "Component": [Function],
    "content": "Duplicate",
    "to": "/templates/create/id",
  },
  Object {
    "Component": [Function],
    "content": "Preview & Send",
    "to": "/templates/preview/id?subaccount=101",
  },
]
`;

exports[`Template EditPage should render correctly 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Templates",
      "to": "/templates",
    }
  }
  empty={Object {}}
  primaryAction={
    Object {
      "content": "Publish Template",
      "disabled": undefined,
      "onClick": undefined,
    }
  }
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "View Published",
        "to": "/templates/edit/id/published?subaccount=101",
      },
      Object {
        "content": "Save as Draft",
        "disabled": undefined,
        "onClick": undefined,
      },
      Object {
        "content": "Delete",
        "onClick": [Function],
      },
      Object {
        "Component": [Function],
        "content": "Duplicate",
        "to": "/templates/create/id",
      },
      Object {
        "Component": [Function],
        "content": "Preview & Send",
        "to": "/templates/preview/id?subaccount=101",
      },
    ]
  }
  title="id (Draft)"
>
  <Grid>
    <Grid.Column
      lg={4}
      xs={12}
    >
      <Connect(Form)
        name="templateEdit"
        readOnly={false}
        subaccountId={101}
      />
    </Grid.Column>
    <Grid.Column
      lg={8}
      xs={12}
    >
      <LoadableComponent
        name="templateEdit"
        readOnly={false}
      />
    </Grid.Column>
  </Grid>
  <DeleteModal
    content={
      <p>
        Both the draft and published versions of this template will be deleted.
      </p>
    }
    onCancel={[Function]}
    onDelete={[Function]}
    open={false}
    title="Are you sure you want to delete this template?"
  />
</Page>
`;

exports[`Template EditPage should render correctly for read-only users 1`] = `
<Page
  breadcrumbAction={
    Object {
      "Component": [Function],
      "content": "Templates",
      "to": "/templates",
    }
  }
  empty={Object {}}
  secondaryActions={
    Array [
      Object {
        "Component": [Function],
        "content": "View Published",
        "to": "/templates/edit/id/published?subaccount=101",
      },
      Object {
        "Component": [Function],
        "content": "Preview & Send",
        "to": "/templates/preview/id?subaccount=101",
      },
    ]
  }
  title="id (Draft)"
>
  <Grid>
    <Grid.Column
      lg={4}
      xs={12}
    >
      <Connect(Form)
        name="templateEdit"
        readOnly={true}
        subaccountId={101}
      />
    </Grid.Column>
    <Grid.Column
      lg={8}
      xs={12}
    >
      <LoadableComponent
        name="templateEdit"
        readOnly={true}
      />
    </Grid.Column>
  </Grid>
  <DeleteModal
    content={
      <p>
        Both the draft and published versions of this template will be deleted.
      </p>
    }
    onCancel={[Function]}
    onDelete={[Function]}
    open={false}
    title="Are you sure you want to delete this template?"
  />
</Page>
`;
